Thu Mar 07 00:34:46 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* tests/api_anydb.cc: Added tradweight4 testcase to test TradWeight
	  with an RSet for weighting documents.

Wed Mar 06 08:55:12 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: gs package has been replaced by ghostscript package in
	  current Debian and Ubuntu releases.

Tue Feb 19 04:17:19 GMT 2013  Olly Betts <olly@survex.com>

	* common/Tokeniseise.pm: Add the ability to append lines to the
	  header.

Fri Feb 15 05:37:09 GMT 2013  Olly Betts <olly@survex.com>

	* common/realtime.h: Fix RealTime::sleep() to calculate the delta to
	  the time we want to sleep to the right way round.  Previously we
	  wouldn't sleep if we were before the deadline, but would sleep if
	  the deadline had already passed (and by the amount the deadline had
	  passed)!  And on Windows, fix the sleep to be for the delta rather
	  than 43+ years (the time elapsed since the start of 1970).  (Fixes
	  #472)

Fri Feb 15 04:09:28 GMT 2013  Olly Betts <olly@survex.com>

	* api/queryinternal.cc: Need <functional> for mem_fun().

Fri Feb 15 03:56:32 GMT 2013  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: Don't provide explicit template types to
	  make_pair - it isn't useful, and breaks with C++11.  Fixes build
	  error with MSVC2012.

Thu Jan 31 23:39:08 GMT 2013  Olly Betts <olly@survex.com>

	* common/Tokeniseise.pm: Put the binary chop tables with the larger
	  ones last, so the offsets to the start of them are more likely to
	  fit into a byte.

Wed Jan 30 04:17:07 GMT 2013  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/Tokeniseise.pm,languages/Makefile.mk,
	  languages/collate-sbl: Factor out the generic code to create a
	  string-to-enum mapping table into a perl module so we can reuse
	  it elsewhere.

Mon Jan 28 01:44:53 GMT 2013  Olly Betts <olly@survex.com>

	* examples/quest.cc: Fix to build with Sun Studio 12 compiler.
	  (ticket#611)
